rajouter la tables des figures

--- a/rapport.tex
+++ b/rapport.tex
@@ -18,6 +18,7 @@
 \fancyhead[R]{Académie de Rennes}
 \renewcommand\footrulewidth{1pt}
 \fancyfoot[L]{Mouhyi MOUTARAJJI}
+
 \begin{document}
 \begin{titlepage}
 	
@@ -57,6 +58,10 @@
 \newpage
 
 \tableofcontents
+
+\newpage
+
+\listoffigures
 ~
 \newpage
 \begin{center}
